# statrethinking

./: README.md  pyproject.toml
chapters/code_examples/: chapter_11.ipynb  chapter_2.ipynb  chapter_3.ipynb  chapter_4.ipynb  chapter_5.ipynb  chapter_6.ipynb  chapter_9.ipynb
chapters/practice_questions/: chapter_10.ipynb  chapter_11.ipynb  chapter_13.ipynb  chapter_2.ipynb  chapter_3.ipynb  chapter_5.ipynb  chapter_6.ipynb  chapter_7.ipynb  chapter_8.ipynb
code_examples/: chapter_10.ipynb  chapter_12.ipynb  chapter_13.ipynb  chapter_2.ipynb  chapter_7.ipynb  chapter_8.ipynb
data/: Mormon.csv
practice_questions/: chapter_12.ipynb  chapter_14.ipynb  chapter_2.ipynb  chapter_4.ipynb  chapter_7.ipynb  fang.ipynb
