[tool.poetry]
name = "statrethinking"
version = "0.1.0"
description = ""
authors = ["Hamzah Iqbal <hamzaiqb@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.4"
statsmodels = "^0.11.1"
theano = "^1.0.4"
pymc3 = "^3.8"
arviz = "^0.8.3"
matplotlib = "^3.2.1"
jupyterlab = "^2.1.4"
black = "^19.10b0"
ipywidgets = "^7.5.1"
seaborn = "^0.10.1"
scipy = "^1.4.1"
plotly = "^4.8.1"
ipympl = "^0.5.6"
jupyter-dash = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
